examples/test/testpolicy12634.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12634
  namespace: namespace142
spec:
  podSelector:
    matchLabels:
      key4: value23
      key26: value6
      key8: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value40
      podSelector:
        matchLabels:
          key24: value44
          key45: value38
